Made classes - MJY
9:18p

--- a/ReSeeRecipe/src/sql/driver/driver.properties
+++ b/ReSeeRecipe/src/sql/driver/driver.properties
@@ -1,4 +1,10 @@
-usename=RECIPE
-password=RESIPE
+# A Properties file stands for
+# 'For yor current project that you are working on with co-workers,
+# you would keep all of common information that would not be changed
+# and also will be shared.
+# = Same as a Global Variable
+# : String only, K-V form, no space or any kinds 
+username=RECIPE
+password=RECIPE
 url=jdbc:oracle:thin:@192.168.30.21:1521:xe
 driver=oracle.jdbc.driver.OracleDriver
