Change a driver.xml - MJY
11:06a

--- a/ReSeeRecipe/src/sql/driver/driver.properties
+++ b/ReSeeRecipe/src/sql/driver/driver.properties
@@ -6,5 +6,5 @@
 # : String only, K-V form, no space or any kinds 
 username=RECIPE
 password=RECIPE
-url=jdbc:oracle:thin:@localhost:1521:xe
+url=jdbc:oracle:thin:@192.168.30.21:1521:xe
 driver=oracle.jdbc.driver.OracleDriver
