--- a/ReSeeRecipe/src/sql/driver/driver.properties
+++ b/ReSeeRecipe/src/sql/driver/driver.properties
@@ -10,8 +10,8 @@
 <!--password=RECIPE-->
 <!--url=jdbc:oracle:thin:@192.168.30.21:1521:xe -->
 
-username=COOK
-password=COOK
+username=RECIPE
+password=RECIPE
 url=jdbc:oracle:thin:@localhost:1521:xe
 <!-->>>>>>> Stashed changes -->
 driver=oracle.jdbc.driver.OracleDriver
