driver.properties파일을 수정하였습니다. 덕분에 이제 주말에도 쉬지않고 코드짤 수 있게 되었습니다! - MJY
- 그대로 pull하시고, 오라클 내 RECIPE계정 > 속성 > 호스트이름을 localhost로 변경하시고 접속하시면 됩니다 ^^ 즐거운 코딩 되세요!

--- a/ReSeeRecipe/src/sql/driver/driver.properties
+++ b/ReSeeRecipe/src/sql/driver/driver.properties
@@ -12,6 +12,6 @@
 
 username=RECIPE
 password=RECIPE
-url=jdbc:oracle:thin:@192.168.30.21:1521:xe
+url=jdbc:oracle:thin:@localhost:1521:xe
 <!-->>>>>>> Stashed changes -->
 driver=oracle.jdbc.driver.OracleDriver
