--- a/ReSeeRecipe/src/sql/driver/driver.properties
+++ b/ReSeeRecipe/src/sql/driver/driver.properties
@@ -1,4 +1,4 @@
-# A Properties file stands for
+-# A Properties file stands for
 # 'For yor current project that you are working on with co-workers,
 # you would keep all of common information that would not be changed
 # and also will be shared.
@@ -12,6 +12,6 @@
 
 username=RECIPE
 password=RECIPE
-url=jdbc:oracle:thin:@localhost:1521:xe
+url=jdbc:oracle:thin:@192.168.30.21:1521:xe
 <!-->>>>>>> Stashed changes -->
 driver=oracle.jdbc.driver.OracleDriver
