--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,4 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,java,eclipse
 ReSeeRecipe/src/sql/driver/driver.properties
+ReSeeRecipe/.classpath
